Search frontend script logic

--- a/auca_registration/src/main/webapp/search.html
+++ b/auca_registration/src/main/webapp/search.html
@@ -147,8 +147,8 @@
         <a href="index.html" class="back-link">← Back to Home</a>
     </div>
 
-    <!-- <script>
-        document.getElementById('searchForm').addEventListener('submit', function(e) {
+    <script>
+        document.getElementById('search').addEventListener('submit', function(e) {
             e.preventDefault();
             
             // Get search query value
@@ -165,6 +165,6 @@
                 window.location.href = googleURL;
             }
         });
-    </script> -->
+    </script>
 </body>
 </html>
