Login frontend logic with Javascript

--- a/auca_registration/src/main/webapp/index.html
+++ b/auca_registration/src/main/webapp/index.html
@@ -228,25 +228,25 @@
     </div>
 
     <script>
-        // // Handle form submission
-        // document.getElementById('login').addEventListener('submit', function(e) {
-        //     e.preventDefault();
+        // Handle form submission
+        document.getElementById('login').addEventListener('submit', function(e) {
+            e.preventDefault();
             
-        //     // Get form values
-        //     const username = document.getElementById('userName').value;
-        //     const password = document.getElementById('userPassword').value;
+            // Get form values
+            const username = document.getElementById('userName').value;
+            const password = document.getElementById('userPassword').value;
             
-        //     // Check password length
-        //     if (password.length < 8) {
-        //         // Weak password - show message and stay on page
-        //         const messageDiv = document.getElementById('message');
-        //         messageDiv.className = 'message weak show';
-        //         messageDiv.innerHTML = `<strong>Hello ${username}</strong>, your password is weak. Try a strong one.`;
-        //     } else {
-        //         // Strong password - navigate to search.html
-        //         window.location.href = 'search.html';
-        //     }
-        // });
+            // Check password length
+            if (password.length < 8) {
+                // Weak password - show message and stay on page
+                const messageDiv = document.getElementById('message');
+                messageDiv.className = 'message weak show';
+                messageDiv.innerHTML = `<strong>Hello ${username}</strong>, your password is weak. Try a strong one.`;
+            } else {
+                // Strong password - navigate to search.html
+                window.location.href = 'search.html';
+            }
+        });
 
         // Create floating sparkles for styling
         function createSparkle() {
