Remove scripts for checking password length

--- a/auca_registration/src/main/webapp/search.html
+++ b/auca_registration/src/main/webapp/search.html
@@ -134,7 +134,7 @@
             <span>G</span><span>o</span><span>o</span><span>g</span><span>l</span><span>e</span>
         </div>
         <h2>Search Redirect</h2>
-        <form id="search">
+        <form id="searchForm" method="get" action="search">
             <div class="form-group">
                 <label for="query">Search Query:</label>
                 <input type="text" id="query" name="query" placeholder="Enter your search term..." required>
